fix blurry logo on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -919,7 +919,7 @@ progress::-webkit-progress-value {
   }
 
   .logo-div {
-    width: 243px;
+    width: 250px;
   }
 
   .finalChoice {
@@ -1002,8 +1002,8 @@ progress::-webkit-progress-value {
   }
 
   .logo-div {
-    height: 79px;
-    background: url(//decidor.s3.us-east-2.amazonaws.com/decidor_243_79.png) center center no-repeat;
+    height: 80px;
+    background: url(//decidor.s3.us-east-2.amazonaws.com/decidor_250_by_80.png) center center no-repeat;
     margin-bottom: 20px;
   }
   
@@ -1107,7 +1107,7 @@ progress::-webkit-progress-value {
   }
 
   .logo-div {
-    width: 243px;
+    width: 250px;
   }
 
   .finalChoice {
@@ -1173,7 +1173,7 @@ progress::-webkit-progress-value {
   }
   
   .logo-div {
-    width: 243px;
+    width: 250px;
   }
   
   .finalChoice {
@@ -1301,7 +1301,7 @@ progress::-webkit-progress-value {
 }
 
 .logo-div {
-  width: 243px;
+  width: 250px;
 }
 
 .finalChoice .cardImage {
